Fix: z-index 변경

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -35,6 +35,7 @@ header {
 main {
   display: flex;
   width: 100%;
+  z-index: 2;
 }
 
 body,
